# robotiq_2f_gripper_ros2

./: .gitmodules  README.md
robotiq_2f_gripper_description/: CMakeLists.txt  package.xml
robotiq_2f_gripper_description/launch/: robotiq_2f_gripper.rviz  visualize.launch
robotiq_2f_gripper_description/urdf/: example_use_robotiq_2f_140.urdf.xacro  robotiq_2f_140.xacro  robotiq_2f_140_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_transmission.xacro
robotiq_2f_gripper_hardware/: CMakeLists.txt  package.xml
robotiq_2f_gripper_hardware/include/robotiq_2f_gripper_hardware/: robotiq_2f_gripper_node.hpp
robotiq_2f_gripper_hardware/launch/: robotiq_2f_gripper_launch.py
robotiq_2f_gripper_hardware/src/: robotiq_2f_gripper_node.cpp
robotiq_2f_gripper_interfaces/: CMakeLists.txt  LICENSE  hardware_interface_plugin.xml  package.xml
robotiq_2f_gripper_interfaces/include/robotiq_2f_gripper_interfaces/: crc_utils.hpp  data_utils.hpp  default_driver.hpp  default_driver_factory.hpp  default_serial.hpp  default_serial_factory.hpp  driver.hpp  driver_exception.hpp  driver_factory.hpp  hardware_interface.hpp  serial.hpp  serial_factory.hpp
robotiq_2f_gripper_interfaces/include/robotiq_2f_gripper_interfaces/fake/: fake_driver.hpp
robotiq_2f_gripper_interfaces/src/: crc_utils.cpp  data_utils.cpp  default_driver.cpp  default_driver_factory.cpp  default_serial.cpp  default_serial_factory.cpp  hardware_interface.cpp
robotiq_2f_gripper_interfaces/src/fake/: fake_driver.cpp
robotiq_2f_gripper_interfaces/tests/: CMakeLists.txt  test_crc_utils.cpp  test_data_utils.cpp  test_default_driver_factory.cpp  test_default_serial_factory.cpp  test_robotiq_gripper_hardware_interface.cpp
robotiq_2f_gripper_interfaces/tests/mock/: mock_driver.hpp  mock_serial.hpp
robotiq_2f_gripper_msgs/: CMakeLists.txt  package.xml
robotiq_2f_gripper_msgs/action/: MoveTwoFingerGripper.action
