<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_2f_gripper_description</name>
  <version>0.0.0</version>
  <description>Robotiq 2-Finger 140mm Gripper ROS2 description package</description>
  <maintainer email="jannis.haberhausen@gmail.com">jannis.haberhausen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>urdf</exec_depend>
</package>